--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TuneX - Music For Everyone</title>
+    <link rel="icon" href="img/logo.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
